--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "flowbite": "^2.3.0",
+        "uuid": "^9.0.1"
     }
 }
